# TEAWin32

./: .clang-format  .hlint.yaml  README.md  TEAWin32.cabal  TEAWin32GUI.cabal  resources.rc
app/: Main.hs  Model.hs
cbits/: Cache.c  Cache.h  DPIAware.c  DPIAware.h  ErrorReporter.c  GUI.c  GUI.h  GUIComponent.c  TEAWin32.c  TEAWin32.h  Util.c  VirtualDOM.c  VirtualDOM.h  dpiaware.c  gui.c  win32_utils.c
native/: Cache.c  Cache.h  DPIAware.c  DPIAware.h  Error.c  Error.h  ErrorReporter.c  ErrorReporter.h  Event.c  Event.h  GUI.c  Registry.c  Registry.h  TEAWin32.c  TEAWin32.h  Util.c  Util.h  VirtualDOM.c  VirtualDOM.h
src/: TEAWin32.hs
src/Data/List/: Extra.hs
src/Framework/: TEA.hs
src/Framework/TEA/: Internal.hs  Internal.hs-boot
src/Graphics/: Drawing.hs  GUI.hs  GUI.hs-boot
src/Graphics/GUI/: Component.hs  Component.hs-boot  DSL.hs  Foreign.hs  Internal.hs  Internal.hs-boot
src/Graphics/GUI/Component/: Button.hs  Internal.hs  Internal.hs-boot  Property.hs  Property.hs-boot  Window.hs  Window.hs-boot
src/Graphics/GUI/Component/Button/: DSL.hs  Internal.hs  Internal.hs-boot  Property.hs
src/Graphics/GUI/Component/Internal/: Attribute.hs  Attribute.hs-boot  Prop.hs  Prop.hs-boot
src/Graphics/GUI/Component/Property/: Internal.hs
src/Graphics/GUI/Component/Window/: DSL.hs  Internal.hs  Internal.hs-boot  Property.hs
src/TEAWin32/: Application.hs  Drawing.hs  Effect.hs  Exception.hs  Foreign.hs  GUI.hs  GUI.hs-boot  Internal.hs  Util.hs
src/TEAWin32/Application/: Instances.hsc  Internal.hs  Internal.hs-boot  WndProc.hs
src/TEAWin32/Application/WndProc/: Instances.hsc
src/TEAWin32/Core/: Application.hs  DSL.hs  ExternalConstants.hsc  Marshall.hs  Native.hs  Renderer.hs  Translator.hs  Types.hs  Util.hs  VirtualDOM.hs
src/TEAWin32/Core/Native/: Constants.hsc
src/TEAWin32/Effect/: MessageBox.hs
src/TEAWin32/GUI/: Component.hs  Component.hs-boot  DSL.hs  Instances.hsc  Intern.hs  Internal.hs  Internal.hs-boot  VirtualDOM.hs  VirtualDOM.hs-boot
src/TEAWin32/GUI/Component/: Button.hs  ComponentRegistry.hs  Internal.hs  Internal.hs-boot  Property.hs  Property.hs-boot  Window.hs  Window.hs-boot
src/TEAWin32/GUI/Component/Button/: DSL.hs  Internal.hs  Internal.hs-boot  Property.hs
src/TEAWin32/GUI/Component/Internal/: Attribute.hs  Attribute.hs-boot
src/TEAWin32/GUI/Component/Property/: Internal.hs
src/TEAWin32/GUI/Component/Window/: DSL.hs  Internal.hs  Internal.hs-boot  Property.hs
src/TEAWin32/GUI/DSL/: Internal.hs
src/TEAWin32/GUI/VirtualDOM/: Internal.hsc  StorableInstance.hs-boot  StorableInstance.hsc
src/TEAWin32/Internal/: Foreign.hs  Native.hs
