cabal-version: 2.2

name:           TEAWin32
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/TEAWin32#readme>
homepage:       https://github.com/t-sasaki915/TEAWin32#readme
bug-reports:    https://github.com/t-sasaki915/TEAWin32/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2026 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/TEAWin32

executable TEAWin32-Experiment
  main-is: Main.hs
  other-modules:
      Paths_TEAWin32
      Model
  autogen-modules:
      Paths_TEAWin32
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      TEAWin32
    , base >=4.7 && <5
    , Win32 >=2.14 && <2.15
    , text >=2.1 && <2.2
    , lens >=5.3 && <5.4
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes

library
  exposed-modules:
      TEAWin32.Application.Internal
      TEAWin32.Effect.MessageBox
      TEAWin32.GUI.Component.Button.DSL
      TEAWin32.GUI.Component.Button.Property
      TEAWin32.GUI.Component.Property.Internal
      TEAWin32.GUI.Component.Window.DSL
      TEAWin32.GUI.Component.Window.Property
      TEAWin32.GUI.Component.Button
      TEAWin32.GUI.Component.ComponentRegistry
      TEAWin32.GUI.Component.Internal
      TEAWin32.GUI.Component.Property
      TEAWin32.GUI.Component.Window
      TEAWin32.GUI.DSL.Internal
      TEAWin32.GUI.Component
      TEAWin32.GUI.DSL
      TEAWin32.GUI.Internal
      TEAWin32.Internal.Foreign
      TEAWin32.Application
      TEAWin32.Drawing
      TEAWin32.Exception
      TEAWin32.GUI
      TEAWin32.Internal
  other-modules:
      Paths_TEAWin32
  autogen-modules:
      Paths_TEAWin32
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , Win32 >=2.14 && <2.15
    , mtl >= 2.3 && <2.4
    , text >=2.1 && <2.2
    , containers >=0.7 && <0.8
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes


test-suite TEAWin32-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_TEAWin32
  autogen-modules:
      Paths_TEAWin32
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      TEAWin32
    , base >=4.7 && <5
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes
