cabal-version: 2.2

name:           TEAWin32
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/TEAWin32#readme>
homepage:       https://github.com/t-sasaki915/TEAWin32#readme
bug-reports:    https://github.com/t-sasaki915/TEAWin32/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2026 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/TEAWin32

executable TEAWin32-Experiment
  main-is: Main.hs
  other-modules:
      Paths_TEAWin32
      Model
  autogen-modules:
      Paths_TEAWin32
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      TEAWin32
    , base >=4.7 && <5
    , Win32 >=2.14 && <2.15
    , text >=2.1 && <2.2
    , lens >=5.3 && <5.4
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes

library
  exposed-modules:
      TEAWin32.Core.Native.Constants
      TEAWin32.Core.DSL
      TEAWin32.Core.Marshall
      TEAWin32.Core.Native
      TEAWin32.Core.Types
      TEAWin32.Core.VirtualDOM
      TEAWin32
  c-sources:
      native/Cache.c
      native/DPIAware.c
      native/ErrorReporter.c
      native/GUI.c
      native/Registry.c
      native/TEAWin32.c
      native/Util.c
      native/VirtualDOM.c
  install-includes:
      Cache.h
      DPIAware.h
      GUI.h
      Registry.h
      TEAWin32.h
      Util.h
      VirtualDOM.h
  include-dirs:
      native
  other-modules:
      Paths_TEAWin32
  autogen-modules:
      Paths_TEAWin32
  hs-source-dirs:
      src
  build-tool-depends:
      hsc2hs:hsc2hs
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  cc-options: -Wall -Wextra -Wpedantic -O2
  build-depends:
      base >=4.7 && <5
    , mtl >= 2.3 && <2.4
    , text >=2.1 && <2.2
    , containers >=0.7 && <0.8
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes
